# app/Http/Routes/Api.php
@@ -7,6 +7,7 @@ class Api extends AbstractRouter
     protected function routes()
     {
         $this->listVehicles();
+        $this->createVehicle();
     }
 
     protected function listVehicles()
@@ -14,6 +15,14 @@ class Api extends AbstractRouter
         $this->getRouter()->get(
             '/vehicles/{modelYear}/{manufacturer}/{model}',
             'VehiclesController@allByAttributes'
+        );
+    }
+
+    protected function createVehicle()
+    {
+        $this->getRouter()->post(
+            'vehicles',
+            'VehiclesController@create'
         );
     }
 }
